Improve UX of card
This should make the card more intuitive by using the text cursor to indicate that the user can input a username in the react-select component, and that they can still click on the user list.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -475,6 +475,7 @@
                     flex-flow: row nowrap;
                     align-items: center;
                     margin-bottom: .5em;
+                    cursor: pointer;
 
                     .detail-item-icon,
                     .detail-item-user-icon {
@@ -512,8 +513,12 @@
                         width: 100%;
                         margin-bottom: 1.5em;
 
-                        .react-select__indicators {
-                            cursor: pointer;
+                        .react-select__control {
+                            cursor: text;
+
+                            .react-select__indicators {
+                                cursor: pointer;
+                            }
                         }
 
                         .react-select__menu {
