--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-container.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-container.scss
@@ -1,5 +1,9 @@
 ﻿@import "../../map_modules/variables";
 
+body {
+    background-color: $light-grey;
+}
+
 #iframe-container {
     position: relative;
     height: 100%;
@@ -12,3 +16,21 @@
         border: none;
     }
 }
+
+#message-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    .primary-message,
+    .secondary-message {
+        width: 100%;
+        text-align: center;
+    }
+
+    .secondary-message {
+        font-weight: 600;
+    }
+}
+
