Add the necessary import to make this scss file work with react

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -1,4 +1,5 @@
-﻿/* Form Elements */
+﻿@import "./variables";
+/* Form Elements */
 
 .admin-panel-content-container form {
     padding: 1em !important;
