--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-container.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-container.scss
@@ -22,6 +22,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: $white;
+    padding: 1em;
+    border: 1px solid $charcoal;
+    border-radius: 1em;
 
     .primary-message,
     .secondary-message {
@@ -31,6 +35,11 @@ body {
 
     .secondary-message {
         font-weight: 600;
+    }
+
+    #download-close-button {
+        margin: 1em 0 0;
+        width: 100%;
     }
 }
 
