--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -8,6 +8,19 @@
     width: 100%;
 }
 
+#iframe-container {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+
+    iframe, object {
+        height: 100vh;
+        width: 100%;
+        overflow: auto;
+        border: none;
+    }
+}
+
 #authorized-content-container {
     width: 100%;
     padding: 1em;
