Fix imports for inclusion in React components

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
@@ -1,4 +1,7 @@
-﻿body {
+﻿@import "./variables";
+@import "./mixins/breakpoints";
+
+body {
     font-family: "Helvetica Neue", sans-serif;
     background-color: $light-grey;
     color: $charcoal;
