--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-container.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/content-container.scss
@@ -1,8 +1,5 @@
 ﻿@import "../../map_modules/variables";
-
-body {
-    background-color: $light-grey;
-}
+@import "../../map_modules/general";
 
 #message-container {
     position: fixed;
