Revert "Remove unecessary css"
This reverts commit e9d82aae9bdf9ed79f3faf5a6a0f93ea62571076.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -2,6 +2,8 @@
 @import "../../map_modules/mixins";
 
 #content-wrapper {
+    overflow-y: auto;
+    height: auto;
     min-height: 100vh;
     width: 100%;
 }
