Make a distinction between a normal content wrapper and a full scroll content wrapper

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_NB_H_F.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_NB_H_F.cshtml
@@ -8,7 +8,7 @@
 
 @Html.AntiForgeryToken()
 
-<div id="content-wrapper" class="navbar-offset">
+<div id="content-wrapper" class="navbar-offset @((string)ViewData["Title"] == "Content" ? "full-scroll" : "")">
     @Html.Partial("_Header")
     <div id="content-container">
         @RenderBody()
