add missing decimal to spacing value

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_footer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_footer.scss
@@ -36,6 +36,6 @@
     #copyright-container {
         align-self:    center;
         text-align:    right;
-        margin-bottom: 5em;
+        margin-bottom: .5em;
     }
 }
