--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -81,8 +81,8 @@
         .secondary-actions {
             flex: 1 0 auto;
             display: flex;
-            flex-flow: row nowrap;
             border-top: 2px solid $charcoal;
+            flex-flow: row wrap;
             margin: 1em -1.2em -1.2em;
             padding: 0;
             font-size: .9em;
