Revert "Merge develop into SsoBackEnd"
This reverts commit db85de06b793b0dcf492d387c75fdd461eae8c5b, reversing
changes made to 967df22eb1122975b96b65b720acdd0c1c445636.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -1,7 +1,7 @@
 ﻿@import "../../map_modules/variables";
 @import "../../map_modules/mixins";
 
-#content-wrapper.full-scroll {
+#content-wrapper {
     overflow-y: auto;
     height: auto;
     min-height: 100vh;
