--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_NB_H_F.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_NB_H_F.cshtml
@@ -8,7 +8,7 @@
 
 @Html.AntiForgeryToken()
 
-<div id="content-wrapper" class="navbar-offset @((string)ViewData["Title"] == "Content" ? "full-scroll" : "")">
+<div id="content-wrapper" class="navbar-offset">
     @await Html.PartialAsync("_Header")
     <div id="content-container">
         @RenderBody()
