--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_footer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_footer.scss
@@ -1,7 +1,6 @@
 ﻿footer {
     display:       flex;
     flex-flow:     row wrap;
-    flex:          none;
     align-content: stretch;
     align-items:   stretch;
     width:         100%;
@@ -20,7 +19,7 @@
             display:       inline-block;
             list-style:    none;
             padding:       0;
-            margin-bottom: .5em;
+            margin-bottom: 1em;
 
             @include for-laptop-up {
                 text-align: center;
@@ -28,7 +27,7 @@
 
             & > li {
                 display: inline-block;
-                margin:  0 .75em .5em;
+                margin:  0 .75em .75em;
             }
         }
     }
@@ -36,6 +35,6 @@
     #copyright-container {
         align-self:    center;
         text-align:    right;
-        margin-bottom: .5em;
+        margin-bottom: 1em;
     }
 }
