--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -81,7 +81,8 @@
         .secondary-actions {
             flex: 1 0 auto;
             display: flex;
-            flex-flow: row wrap;
+            flex-flow: row nowrap;
+            border-top: 2px solid $charcoal;
             margin: 1em -1.2em -1.2em;
             padding: 0;
             font-size: .9em;
@@ -96,7 +97,6 @@
                 color: $white;
                 font-weight: bold;
                 border-right: 1px solid $charcoal;
-                border-top: 1px solid $charcoal;
                 text-align: center;
 
                 &:hover {
