--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
@@ -5,6 +5,13 @@
     width: 100vw;
     overflow: hidden;
 
+    &.full-scroll {
+        overflow-y: auto;
+        height: auto;
+        min-height: 100vh;
+        width: 100%;
+    }
+
     @include for-tablet-down() {
         overflow: auto !important;
     }
