Remove unused styling
_account-settings.scss was very poorly named to begin with, and there wasn't much there anyways.  Move the still used code to a more generic location and update the imports to remove the dead file.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
@@ -35,3 +35,13 @@
         display: none !important;
     }
 }
+
+#create-initial-user-container,
+#enable-account-container,
+#reset-password-container,
+#message-container {
+    display: flex;
+    flex: 1 0 auto;
+    justify-content: center;
+    align-items: center;
+}
