Convert all Partial calls to PartialAsync in Razor templates

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_F.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_F.cshtml
@@ -4,7 +4,7 @@
 
 <div id="content-wrapper">
     @RenderBody()
-    @Html.Partial("_Footer")
+    @await Html.PartialAsync("_Footer")
 </div>
 
 @section CSS {
