Reduce compiler recommendation messages

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout.cshtml
@@ -25,9 +25,9 @@
     @RenderBody()
 
     <div id="global-settings"
-         data-domain-validation-regex="@Html.Raw(MapCommonLib.GlobalFunctions.domainValRegex)"
-         data-email-validation-regex="@Html.Raw(MapCommonLib.GlobalFunctions.emailValRegex)"
-         data-max-file-upload-size="@Html.Raw(MapCommonLib.GlobalFunctions.maxFileUploadSize)"
+         data-domain-validation-regex="@Html.Raw(MapCommonLib.GlobalFunctions.DomainValRegex)"
+         data-email-validation-regex="@Html.Raw(MapCommonLib.GlobalFunctions.EmailValRegex)"
+         data-max-file-upload-size="@Html.Raw(MapCommonLib.GlobalFunctions.MaxFileUploadSize)"
          style="display: none;"></div>
 
 </body>
