--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -153,7 +153,7 @@
     font-style: italic;
     color: $red;
     margin: .25rem;
-    white-space: pre;
+    white-space: pre-line;
 }
 
 .button-container {
