--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
@@ -54,7 +54,7 @@
         }
     }
 
-    .admin-panel-content-container,
+    .form-content-container,
     .admin-panel-action-container {
         padding-right: 1em;
         padding-left: 3px;
@@ -114,7 +114,7 @@
         }
     }
 
-    .admin-panel-content-container {
+    .form-content-container {
         flex: 1 1 auto;
     }
     .admin-panel-action-container {
