have form content container use flex
so that we can easily center on page both vertically and horizontally

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -1,5 +1,14 @@
 ﻿@import "../../map_modules/variables";
 
+.form-content-container {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: stretch;
+    align-content: stretch;
+    align-self: center;
+    margin: 2em auto;
+}
+
 .form-section-title {
     margin-bottom: 1em;
     border-bottom: 1px solid $charcoal;
