add flex with direction to the body
followed this article and it worked: https://stackoverflow.com/questions/40490954/flex-container-min-height-ignored-in-ie

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
@@ -1,4 +1,9 @@
-﻿#content-wrapper {
+﻿body {
+    display: flex;
+    flex-direction: column;
+ }
+
+#content-wrapper {
     display: flex;
     flex-flow: column nowrap;
     height: 100vh;
