--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
@@ -45,3 +45,13 @@
     justify-content: center;
     align-items: center;
 }
+#message-container {
+    flex-flow: column nowrap;
+
+    .primary-message,
+    .secondary-message {
+        width: 100%;
+        text-align: center;
+        padding: 1em 0;
+    }
+}
