consolidate into one class
since we dont have a need for two classes at this time

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_layout.scss
@@ -48,8 +48,7 @@
 #message-container {
     flex-flow: column nowrap;
 
-    .primary-message,
-    .secondary-message {
+    .message {
         width: 100%;
         text-align: center;
         padding: 1em 0;
