make the styling the same for error classes
didn't merge these classes into one (although I still may try to do that) but for now, leave them separate but make them share the same styling

removed the italics and made text a bit smaller to fit the space better

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -419,10 +419,11 @@ label.input-with-upload {
 span.field-validation-error,
 span.form-validation-error,
 .validation-summary-errors {
+    display: block;
+    font-size: .83rem;
     color: $red;
-    font-weight: bold;
-    font-style: italic;
-    font-size: .75em;
+    margin: .25rem;
+    white-space: pre-line;
 }
 
 span.form-validation-error {
