--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
@@ -5,6 +5,16 @@
 }
 
 <html>
+    <head>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+                overflow-y: auto;
+                overflow-x: hidden;
+            }
+        </style>
+    </head>
     <body>
         <div id="reportContainer"></div>
 
