--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
@@ -12,6 +12,9 @@
                 padding: 0;
                 overflow: hidden;
             }
+            iframe {
+                border: 0;
+            }
         </style>
     </head>
     <body>
