update css for error messages
make it slightly smaller and not italics

i think non italics are easier to read, especially if they are stacked

also font size i think can be smaller to fit on one line in the case of smaller screens plus in general, errors are not meant to be the main focus but rather a helper on the screen. the fact that they are red draws enough attention in my opinion

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -159,7 +159,7 @@
 
 .error-message {
     display: block;
-    font-style: italic;
+    font-size: .9rem;
     color: $red;
     margin: .25rem;
     white-space: pre-line;
