--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -2,6 +2,7 @@
 
 /* Form Elements */
 
+.admin-panel-content-container form,
 .form-content-container form {
     padding: 1em !important;
     background-color: $white;
