--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_selectize_overrides.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_selectize_overrides.scss
@@ -33,7 +33,8 @@ div.selectize-input {
         -webkit-appearance: none;
         opacity: 1 !important;
 
-        div.item {
+        div.item,
+        div.item.non-limited[data-value] {
             background: $grey;
             color: $charcoal !important;
             border: none !important;
@@ -41,6 +42,8 @@ div.selectize-input {
             z-index: 10;
             opacity: 1;
             padding-right: 1em !important;
+            background-color: transparent !important;
+            background-image: none !important;
 
             a.remove {
                 display: none;
@@ -51,6 +54,11 @@ div.selectize-input {
     div.item {
         margin: .25em !important;
         cursor: default !important;
+
+        &.non-limited {
+            background-color: $green !important;
+            background-image: linear-gradient(to bottom, lighten($green, 5%), darken($green, 5%)) !important;
+        }
 
         a.remove {
             margin-left: .25em;
