style and reorder the change domain limit button
so that it sits inline with the domain limit number

this will be used to open a form to change that number of domains

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -48,6 +48,12 @@ a,
     }
 }
 
+.inline-link-button {
+    padding: 0 0 0 1em !important;
+    margin: 0;
+    line-height: normal;
+}
+
 button,
 .button {
     border: 1px solid transparent;
