--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/system-admin/detail-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/system-admin/detail-panel.scss
@@ -38,7 +38,7 @@
 
                     ul {
                         list-style: none;
-                        padding: none;
+                        padding: 0;
                     }
                 }
             }
