--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -155,6 +155,77 @@
             }
         }
     }
+
+    .form-element-textarea {
+        position: relative;
+        display: flex;
+        flex-flow: row nowrap;
+        min-height: 10rem;
+        width: 100%;
+        align-self: flex-start;
+        margin-bottom: .5rem;
+
+        &.error {
+            border: 2px solid $red;
+        }
+
+        .form-input-container {
+            flex: 1 0 auto;
+            position: relative;
+            border: 1px solid $charcoal;
+            background-color: $white;
+
+            textarea.form-input {
+                font-size: 1.25rem;
+                border: none;
+                background-color: transparent;
+                color: $charcoal;
+                transition: all .25s;
+
+                &:focus:not([readonly]) {
+
+                    & + .form-input-label {
+                        color: $blue;
+                        font-weight: bold;
+                    }
+                }
+
+                &:not([value='']),
+                &:focus {
+                    padding: 1.25rem .5rem .1rem;
+                }
+
+                &[readonly] + .form-input-label,
+                &[disabled] + .form-input-label,
+                &:not([value='']) + .form-input-label,
+                &:focus + .form-input-label {
+                    top: 0;
+                    opacity: 1;
+                    transition: opacity .5s, top .5s;
+                }
+
+                &[readonly],
+                &[disabled],
+                &:focus {
+                    &::placeholder {
+                        color: transparent;
+                    }
+                }
+            }
+
+            .form-input-label {
+                position: absolute;
+                top: .25rem;
+                left: 0;
+                padding: .25rem .5rem;
+                font-size: .75rem;
+                font-weight: 300;
+                color: $dark-grey;
+                opacity: 0;
+                pointer-events: none;
+            }
+        }
+    }
 }
 
 .error-message {
