--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -81,7 +81,7 @@
             }
 
             &.waiting {
-                
+
                 &:hover {
                     background-color: $green;
                 }
@@ -190,14 +190,14 @@
                     }
                 }
 
-                &:not([value='']),
+                &:not([data-input-value='']),
                 &:focus {
                     padding: 1.25rem .5rem .1rem;
                 }
 
                 &[readonly] + .form-input-label,
                 &[disabled] + .form-input-label,
-                &:not([value='']) + .form-input-label,
+                &:not([data-input-value='']) + .form-input-label,
                 &:focus + .form-input-label {
                     top: 0;
                     opacity: 1;
