change display to flex for file upload icons
so that they are displayed properly in the form for republishing

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -346,7 +346,7 @@ label.input-with-upload {
 
     .file-upload-icons {
         position: absolute;
-        display: inline-block;
+        display: flex;
         right: .25em;
         top: 1.9em;
         z-index: 2;
