Tweak the spacing a bit and add a border

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
@@ -109,6 +109,8 @@
                     flex-flow: row nowrap;
                     justify-content: space-around;
                     padding: 1em 0;
+                    border-top: 2px solid $charcoal;
+                    margin-top: 1em;
 
                     .fieldset-option {
                         flex: 1 0 auto;
