update some styling
this needs more work but want to commit what i have thus far

- remove the horizontal rule
- remove upper border
- style h4 like the form h4 for consistency

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
@@ -104,12 +104,19 @@
 
             .fieldset-container {
 
+                h4 {
+                    width: 100%;
+                    border-bottom: 2px solid #2B2B2B;
+                    padding: 1em .5em 0 .5em;
+                    margin-bottom: .25em;
+                    text-transform: uppercase;
+                }
+
                 .fieldset-options-container {
                     display: flex;
                     flex-flow: row nowrap;
                     justify-content: space-around;
                     padding: 1em 0;
-                    border-top: 2px solid $charcoal;
                     margin-top: 1em;
 
                     .fieldset-option {
@@ -134,7 +141,8 @@
                 fieldset {
 
                     legend {
-                        border-bottom: 1px solid $black;
+                        border-bottom: 1px solid $charcoal;
+                        font-size: 1em;
                     }
                 }
             }
