--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
@@ -116,7 +116,7 @@
                     display: flex;
                     flex-flow: row nowrap;
                     justify-content: space-around;
-                    padding: 1em 0;
+                    padding-bottom: 1em;
                     margin-top: 1em;
 
                     .fieldset-option {
