Start process of enabling PowerBI Bookmarks pane.
Do this to get the conversation seeded.  This commit won't work on it's own.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
@@ -47,6 +47,7 @@
 
 	    // Embed the report and display it within the div container.
 	    var report = powerbi.embed(reportContainer, config);
+	    report.on('loaded', function(event) {report.updateSettings({bookmarksPaneEnabled: @Json.Serialize(Model.BookmarksPaneEnabled)})});
         </script>
     </body>
 </html>
