Enable autosizing on textareas in the content publishing view
Allow the text areas to resize automatically to fit the content with a max height of 300 px.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -162,6 +162,7 @@ textarea {
     border: none;
     border-right: 1px dashed $charcoal;
     border-bottom: 1px solid $charcoal;
+    min-height: 70px;
 
     &:focus {
         border-right: 1px dashed $blue;
