--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/content-disclaimer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/content-disclaimer.scss
@@ -25,12 +25,16 @@ body {
 
     #content-name {
         flex: none;
+        margin-bottom: .5em;
     }
 
     #content-disclaimer-text {
         flex: 1 1 auto;
         overflow-y: auto;
-        white-space: pre-line;
+        background-color: $light-grey;
+        padding: 1em;
+        border: 1px solid $grey;
+        box-shadow: inset 0 0 3px $charcoal;
     }
 
     #content-disclaimer-form {
