--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/content-disclaimer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/content-disclaimer.scss
@@ -37,6 +37,10 @@ body {
         box-shadow: inset 0 0 3px $charcoal;
     }
 
+    #content-disclaimer-acceptance {
+        font-weight: bold;
+    } 
+    
     #content-disclaimer-form {
         flex: none;
         width: 100%;
