--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/content-disclaimer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/content-disclaimer.scss
@@ -31,10 +31,10 @@ body {
     #content-disclaimer-text {
         flex: 1 1 auto;
         overflow-y: auto;
-        background-color: $light-grey;
+        background-color: $white;
         padding: 1em;
         border: 1px solid $grey;
-        box-shadow: inset 0 0 3px $charcoal;
+        box-shadow: inset 0 0 3px $dark-grey;
     }
 
     #content-disclaimer-acceptance {
