Add some styling to make the preview toggling look decent

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
@@ -35,3 +35,7 @@ body {
 svg:not([id='header-logo']):not(.action-icon):not(.cancel-icon):not(.upload-icon) {
     pointer-events: none;
 }
+
+b, strong {
+    font-weight: bold;
+}
