--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_form.scss
@@ -458,3 +458,25 @@ span.form-validation-error {
         margin-bottom: 1em;
     }
 }
+
+.markdown-view-button-container {
+    padding: .5em;
+
+    .markdown-view-toggle {
+        display: inline-block;
+        padding: .25em 2em;
+        cursor: pointer;
+        margin-right: .25em;
+        font-weight: bold;
+        color: $blue;
+        text-decoration: underline;
+
+        &.selected {
+            background-color: $blue;
+            color: $white;
+            border: 2px solid $charcoal;
+            text-decoration: none;
+            cursor: default;
+        }
+    }
+}
