--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_content-publishing.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_content-publishing.scss
@@ -1,3 +1,12 @@
+.admin-panel-content.form-disabled .markdown-view-button-container {
+    display: none;
+}
+
+#ContentDisclaimerPreview {
+    padding: .5em;
+    border: 1px solid $charcoal;
+}
+
 .confirmation-section {
     margin-bottom: 2em;
 
