--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
@@ -39,3 +39,11 @@ svg:not([id='header-logo']):not(.action-icon):not(.cancel-icon):not(.upload-icon
 b, strong {
     font-weight: bold;
 }
+
+table {
+    margin-bottom: 1em;
+
+    th, td {
+        padding-left: .5em;
+    }
+}
