--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_content-publishing.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/views/_content-publishing.scss
@@ -1,10 +1,19 @@
-.admin-panel-content.form-disabled .markdown-view-button-container {
-    display: none;
+.admin-panel-content.form-disabled {
+
+    .markdown-view-button-container,
+    #ContentDisclaimerGuide {
+        display: none;
+    }
 }
 
 #ContentDisclaimerPreview {
     padding: .5em;
     border: 1px solid $charcoal;
+}
+
+#ContentDisclaimerGuide {
+    text-align: right;
+    padding: .5em;
 }
 
 .confirmation-section {
@@ -27,6 +36,7 @@
         h4 {
             float: left;
         }
+
         span {
             float: right;
         }
