--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
@@ -28,7 +28,7 @@ body {
         margin-bottom: .5em;
     }
 
-    #content-disclaimer-text {
+    #disclaimer-text {
         flex: 1 1 auto;
         overflow-y: auto;
         background-color: $white;
@@ -36,11 +36,11 @@ body {
         border: 1px solid $grey;
     }
 
-    #content-disclaimer-acceptance {
+    #disclaimer-acceptance {
         font-weight: bold;
     } 
     
-    #content-disclaimer-form {
+    #disclaimer-form {
         flex: none;
         width: 100%;
 
