--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
@@ -20,10 +20,15 @@
             flex: 1 0 auto;
             padding: 1em;
 
-            textarea {
+            textarea,
+            #AgreementPreview {
                 height: 100%;
                 width: 100%;
                 margin-bottom: 1em;
+            }
+
+            #AgreementPreview {
+                overflow-y: auto;
             }
         }
 
