--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
@@ -17,8 +17,9 @@
         }
 
         #user-agreement-text {
-            flex: 1 0 auto;
+            flex: 1 0 0;
             padding: 1em;
+            overflow: hidden;
 
             textarea,
             #AgreementPreview {
