IE doesn't support this syntax, but the other browsers appear to be ok with this.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
@@ -17,7 +17,7 @@
         }
 
         #user-agreement-text {
-            flex: 1 0 0;
+            flex: 1 0;
             padding: 1em;
             overflow: hidden;
 
