--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/update-user-agreement.scss
@@ -4,6 +4,8 @@
 #agreement-container {
     flex: 1 0 auto;
     padding: 1em 5em 4em;
+    height: auto;
+    max-height: 90%;
 
     #user-agreement-form {
         display: flex;
