Add polyfills to the Power BI to support bookmarks pane
IE doesn't support promises without a polyfill, so this should address that and allow the bookmarks pane to be displayed.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/PowerBi.cshtml
@@ -20,6 +20,7 @@
     <body>
         <div id="reportContainer"></div>
 
+        <script src="~/js/polyfills.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/powerbi-client@2.7.2/dist/powerbi.min.js"></script>
         <script>
 	    // Get models. models contains enums that can be used.
