Add styling for the upload progress bars

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -175,6 +175,38 @@
     }
 }
 
+/* File Upload Component */
+
+.progress-bars {
+    position: relative;
+    display: block;
+    height: .35em;
+    margin: -1rem -.5em 0;
+
+    [class*="progress-bar-"] {
+        position: absolute;
+        width: 0;
+        height: 100%;
+    }
+
+    .progress-easing {
+        transition: 1.0s linear;
+    }
+
+    .progress-bar-checksum {
+        background-color: $blue;
+    }
+
+    .progress-bar-upload {
+        background-color: $green;
+    }
+
+    .progress-bar-error {
+        background-color: $red;
+    }
+}
+
+
 .error-message {
     display: block;
     font-size: .9rem;
