Make the last few form elements consistent when disabled

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -114,8 +114,7 @@
             }
         }
 
-        .form-input-container,
-        .form-select-container {
+        .form-input-container {
             flex: 1 0 auto;
             align-items: flex-start;
             position: relative;
