Hook up the content disclaimer preview in the content item form

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -113,12 +113,12 @@
         .action-icon-label,
         .form-input-container,
         .thumbnail-preview {
-            border-color: $grey !important;
+            border-color: $dark-grey !important;
         }
 
         .form-input-label,
         .form-input {
-            color: darken($grey, 10%) !important;
+            color: darken($dark-grey, 10%) !important;
         }
     }
 
